--- a/BINA.ipynb
+++ b/BINA.ipynb
@@ -6,7 +6,9 @@
    "id": "10a5401d-27de-4358-9515-e8c572e90176",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"hello world\")"
+   ]
   }
  ],
  "metadata": {
