--- a/BINA.ipynb
+++ b/BINA.ipynb
@@ -15,7 +15,9 @@
         "\n",
         "\n",
         "\n",
-        "halloo"
+        "halloo\n",
+        "\n",
+        "ciao"
       ]
     }
   ],
