--- a/BINA.ipynb
+++ b/BINA.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "halloo\n",
         "\n",
-        "ciao bella hello"
+        "ciao bella hello saletti"
       ]
     }
   ],
