--- a/BINA.ipynb
+++ b/BINA.ipynb
@@ -1,48 +1,48 @@
 {
-  "cells": [
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "10a5401d-27de-4358-9515-e8c572e90176",
-      "metadata": {
-        "id": "10a5401d-27de-4358-9515-e8c572e90176"
-      },
-      "outputs": [],
-      "source": [
-        "print(\"hello world\")\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "halloo\n",
-        "\n",
-        "ciao bella hello saletti"
-      ]
-    }
-  ],
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.13.2"
-    },
-    "colab": {
-      "provenance": []
-    }
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10a5401d-27de-4358-9515-e8c572e90176",
+   "metadata": {
+    "id": "10a5401d-27de-4358-9515-e8c572e90176"
+   },
+   "outputs": [],
+   "source": [
+    "print(\"hello world\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "halloo\n",
+    "\n",
+    "ciao bella hello saletti ajkadskadkjda"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "provenance": []
   },
-  "nbformat": 4,
-  "nbformat_minor": 5
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
 }
