Mit Colab erstellt => Text erstellt

--- a/BINA.ipynb
+++ b/BINA.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "Für die Projektarbeit"
+      ],
+      "metadata": {
+        "id": "bGrvmnO7viVb"
+      },
+      "id": "bGrvmnO7viVb"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "10a5401d-27de-4358-9515-e8c572e90176",
@@ -17,7 +27,7 @@
         "\n",
         "halloo\n",
         "\n",
-        "ciao bella hello saletti ajkadskadkjda blabla"
+        "ciao bella hello saletti ajkadskadkjda"
       ]
     }
   ],
