Mit Colab erstellt

--- a/BINA.ipynb
+++ b/BINA.ipynb
@@ -27,7 +27,7 @@
         "\n",
         "halloo\n",
         "\n",
-        "ciao bella hello saletti ajkadskadkjda"
+        "ciao bella hello saletti ajkadskadkjda blabla"
       ]
     }
   ],
