Mit Colab erstellt

--- a/BINA.ipynb
+++ b/BINA.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Für die Projektarbeit"
+        "Für die Projektarbeit blblablablabla"
       ],
       "metadata": {
         "id": "bGrvmnO7viVb"
