Mit Colab erstellt

--- a/Adrian.ipynb
+++ b/Adrian.ipynb
@@ -45,11 +45,11 @@
         "print(df.head())\n"
       ],
       "metadata": {
-        "id": "Kux4YsoFiznX",
-        "outputId": "afe776f1-2df7-4933-90b9-3acdb1f9012d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Kux4YsoFiznX",
+        "outputId": "afe776f1-2df7-4933-90b9-3acdb1f9012d"
       },
       "id": "Kux4YsoFiznX",
       "execution_count": 13,
@@ -67,6 +67,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Als erstes möchten wir sehen, wie sich der allgemeine Verbrauch je Energieträger verändert hat."
+      ],
+      "metadata": {
+        "id": "pyn1Y7wvnlc-"
+      },
+      "id": "pyn1Y7wvnlc-"
     },
     {
       "cell_type": "code",
@@ -89,12 +99,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "0ysx8NeWj0Q8",
-        "outputId": "5a4760a1-2a00-4046-e701-4cd6bf94c439",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 564
-        }
+        },
+        "id": "0ysx8NeWj0Q8",
+        "outputId": "5a4760a1-2a00-4046-e701-4cd6bf94c439"
       },
       "id": "0ysx8NeWj0Q8",
       "execution_count": 19,
