Mit Colab erstellt

--- a/Adrian.ipynb
+++ b/Adrian.ipynb
@@ -1,6 +1,19 @@
 {
   "cells": [
     {
+      "cell_type": "code",
+      "source": [
+        "!pip install -q xlrd\n",
+        "!git clone https://github.com/Lossophy/BINA-Projekt.git"
+      ],
+      "metadata": {
+        "id": "qPQbiGKTZCx5"
+      },
+      "id": "qPQbiGKTZCx5",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "Vorbereitung der benötigten Bibliotheken"
@@ -12,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "8c9d93d7-5c65-4c98-926a-46997f1445e2",
       "metadata": {
         "id": "8c9d93d7-5c65-4c98-926a-46997f1445e2"
@@ -52,7 +65,7 @@
         "outputId": "afe776f1-2df7-4933-90b9-3acdb1f9012d"
       },
       "id": "Kux4YsoFiznX",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +121,7 @@
         "outputId": "07ca9bcc-eb52-413c-d927-818507b2d2e9"
       },
       "id": "0ysx8NeWj0Q8",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
