Mit Colab erstellt

--- a/Adrian.ipynb
+++ b/Adrian.ipynb
@@ -7,11 +7,29 @@
         "!git clone https://github.com/Lossophy/BINA-Projekt.git"
       ],
       "metadata": {
-        "id": "qPQbiGKTZCx5"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qPQbiGKTZCx5",
+        "outputId": "37c0db71-db4e-4e6c-f733-aef818b74d29"
       },
       "id": "qPQbiGKTZCx5",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'BINA-Projekt'...\n",
+            "remote: Enumerating objects: 107, done.\u001b[K\n",
+            "remote: Counting objects: 100% (107/107), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (93/93), done.\u001b[K\n",
+            "remote: Total 107 (delta 54), reused 34 (delta 12), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (107/107), 958.08 KiB | 22.28 MiB/s, done.\n",
+            "Resolving deltas: 100% (54/54), done.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -52,7 +70,7 @@
       "cell_type": "code",
       "source": [
         "# Datei einlesen\n",
-        "df = pd.read_csv('ogd115_gest_bilanz.csv')\n",
+        "df = pd.read_csv('/content/BINA-Projekt/Data/ogd115_gest_bilanz.csv')\n",
         "\n",
         "# Daten überprüfen\n",
         "print(df.head())\n"
@@ -62,10 +80,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Kux4YsoFiznX",
-        "outputId": "afe776f1-2df7-4933-90b9-3acdb1f9012d"
+        "outputId": "ab999d75-d7e2-48e1-c4fc-1db6d2f2ff12"
       },
       "id": "Kux4YsoFiznX",
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,13 +133,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 564
+          "height": 467
         },
         "id": "0ysx8NeWj0Q8",
-        "outputId": "07ca9bcc-eb52-413c-d927-818507b2d2e9"
+        "outputId": "ef470267-5ffd-45e9-f956-5be926926c4d"
       },
       "id": "0ysx8NeWj0Q8",
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "display_data",
