Mit Colab erstellt

--- a/Adrian.ipynb
+++ b/Adrian.ipynb
@@ -11,22 +11,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qPQbiGKTZCx5",
-        "outputId": "37c0db71-db4e-4e6c-f733-aef818b74d29"
+        "outputId": "ca079433-d18d-4783-9dfa-0134473596b4"
       },
       "id": "qPQbiGKTZCx5",
-      "execution_count": 18,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'BINA-Projekt'...\n",
-            "remote: Enumerating objects: 107, done.\u001b[K\n",
-            "remote: Counting objects: 100% (107/107), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (93/93), done.\u001b[K\n",
-            "remote: Total 107 (delta 54), reused 34 (delta 12), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (107/107), 958.08 KiB | 22.28 MiB/s, done.\n",
-            "Resolving deltas: 100% (54/54), done.\n"
+            "remote: Enumerating objects: 110, done.\u001b[K\n",
+            "remote: Counting objects: 100% (110/110), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (96/96), done.\u001b[K\n",
+            "remote: Total 110 (delta 56), reused 34 (delta 12), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (110/110), 958.70 KiB | 2.49 MiB/s, done.\n",
+            "Resolving deltas: 100% (56/56), done.\n"
           ]
         }
       ]
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "8c9d93d7-5c65-4c98-926a-46997f1445e2",
       "metadata": {
         "id": "8c9d93d7-5c65-4c98-926a-46997f1445e2"
@@ -80,10 +80,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Kux4YsoFiznX",
-        "outputId": "ab999d75-d7e2-48e1-c4fc-1db6d2f2ff12"
+        "outputId": "cae0426b-dc67-41cc-b8c2-d641c0c54c13"
       },
       "id": "Kux4YsoFiznX",
-      "execution_count": 19,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,6 +98,51 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Beschreibung der Daten:**\n",
+        "Die Daten wurden von der  SFOE (Swiss Federal Office of Energy) heruntergeladen. Unter folgendem Link https://opendata.swiss/en/dataset/energiebilanz-der-schweiz/resource/1957ce24-bc06-40f8-a630-6db5bee3c419.\n",
+        "\n",
+        "\n",
+        "---\n",
+        "Der Datensatz hat die Spalten \"Jahr\", \"Rubrik\", \"Energieträger\" und \"TJ\".\n",
+        "\n",
+        "Die Daten sind vom Jahr 1980 bis und mit 2023.\n",
+        "\n",
+        "Es werden die folgenden Rubriken unterschieden:\n",
+        "\n",
+        "\n",
+        "*   Bruttoverbrauch =\n",
+        "*   Eigenverbrauch des Energiesektors, Netzverluste, Verbrauch der Speicherungen =\n",
+        "*   Endverbrauch - Dienstleistungen =\n",
+        "*   Endverbrauch - Haushalte =\n",
+        "*   Endverbrauch - Industrie =\n",
+        "*   Endverbrauch - Statistische Differenz inkl. Landwirtschaft =\n",
+        "*   Endverbrauch - Total =\n",
+        "*   Endverbrauch - Verkehr =\n",
+        "*   Energieumwandlung - Diverse Erneuerbare =\n",
+        "*   Energieumwandlung - Gaswerke =\n",
+        "*   Energieumwandlung - Kernkraftwerke =\n",
+        "*   Energieumwandlung - Raffinerien =\n",
+        "*   Energieumwandlung - Wasserkraftwerke\n",
+        "*   Energieumwandlung - konventionell-thermische Kraft-, Fernheiz- und Fernheizkraftwerke =\n",
+        "*   Export =\n",
+        "*   Import =\n",
+        "*   Inlandproduktion =\n",
+        "*   Lagerveränderung =\n",
+        "*   Nichtenergetischer Verbrauch =\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "1 Terajoule entspricht dabei 277'777,777 KWh. Zur besseren Einordnung kann die grösse der Energieeinheit mit folgendem Durchschnittswert dargestellt werden. Ein durchschnitts Haushalt mit 4 Personen in der Schweiz braucht ca. 4'500 KWh pro Jahr (https://www.energieheld.ch/renovation/nachhaltig-leben/energieverbrauch)."
+      ],
+      "metadata": {
+        "id": "XgHdr8CzVOAB"
+      },
+      "id": "XgHdr8CzVOAB"
     },
     {
       "cell_type": "markdown",
@@ -133,13 +178,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 467
+          "height": 564
         },
         "id": "0ysx8NeWj0Q8",
-        "outputId": "ef470267-5ffd-45e9-f956-5be926926c4d"
+        "outputId": "1639a554-8e1d-4778-a818-c057cfdbf833"
       },
       "id": "0ysx8NeWj0Q8",
-      "execution_count": 20,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
